--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
         "MusicPlayer",
         "VideoPlayer"
     ],
-    "repository": "https://github.com/TeamOctave/VcUserBot",
+    "repository": "https://github.com/XDacchuX/VcUserBot",
     "env": {
         "SESSION": {
             "description": "Pyrogram String Session",
